--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "author": "Estefanía García Gallardo",
   "license": "MIT",
   "dependencies": {
-    "node-forge": "^1.3.1",
-    "ts-node": "^10.9.2"
+    "node-forge": "^1.3.1"
   },
   "devDependencies": {
-    "@types/node-forge": "^1.3.11"
+    "@types/node-forge": "^1.3.11",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
